--- a/GitGud/Base.lproj/Main.storyboard
+++ b/GitGud/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                 <rect key="frame" x="20" y="587" width="374" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
                                     <action selector="textFieldDidEndEditing:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="76e-Vl-vN2"/>
@@ -77,7 +77,7 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.15385637974537125" green="0.53381528556643731" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="kYt-vx-cY3"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="startColor">
                                 <color key="value" red="0.25091149557225489" green="0.64843401883854845" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -99,7 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1815.9420289855075" y="118.52678571428571"/>
+            <point key="canvasLocation" x="1871" y="119"/>
         </scene>
         <!--Git Visualizer View Controller-->
         <scene sceneID="S0X-nS-bWE">
@@ -109,38 +109,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y5H-Bg-7jy">
-                                <rect key="frame" x="20" y="88" width="374" height="774"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" contentInsetAdjustmentBehavior="never" translatesAutoresizingMaskIntoConstraints="NO" id="Y5H-Bg-7jy">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T9U-V1-v3C" userLabel="Content View" customClass="GitDraw" customModule="GitGud" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="774"/>
+                                    <view contentMode="bottom" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SzR-oD-cXb" customClass="GitDraw" customModule="GitGud" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     </view>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="T9U-V1-v3C" secondAttribute="bottom" id="5KC-AU-PAo"/>
-                                    <constraint firstAttribute="trailing" secondItem="T9U-V1-v3C" secondAttribute="trailing" id="D9V-nr-a7u"/>
-                                    <constraint firstItem="T9U-V1-v3C" firstAttribute="bottom" secondItem="YW4-uZ-hWu" secondAttribute="bottom" id="HvX-Mq-tUK"/>
-                                    <constraint firstItem="T9U-V1-v3C" firstAttribute="top" secondItem="YW4-uZ-hWu" secondAttribute="top" id="Uzp-kd-IIl"/>
-                                    <constraint firstItem="T9U-V1-v3C" firstAttribute="leading" secondItem="YW4-uZ-hWu" secondAttribute="leading" id="ahX-1T-b6i"/>
-                                    <constraint firstItem="T9U-V1-v3C" firstAttribute="centerX" secondItem="Y5H-Bg-7jy" secondAttribute="centerX" id="h0F-WV-qZU"/>
-                                </constraints>
+                                <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <viewLayoutGuide key="contentLayoutGuide" id="txF-Vx-8qI"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="YW4-uZ-hWu"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="startColor">
+                                        <color key="value" red="0.49847125894963629" green="1" blue="0.82384419650398488" alpha="0.84705882352941175" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="Y5H-Bg-7jy" firstAttribute="top" secondItem="blE-Pe-OcQ" secondAttribute="top" id="Dqg-nc-m1M"/>
-                            <constraint firstItem="Y5H-Bg-7jy" firstAttribute="leading" secondItem="LMx-kh-VmJ" secondAttribute="leadingMargin" id="WZ4-CO-QEX"/>
-                            <constraint firstItem="Y5H-Bg-7jy" firstAttribute="bottom" secondItem="blE-Pe-OcQ" secondAttribute="bottom" id="sI9-XF-zny"/>
-                            <constraint firstItem="Y5H-Bg-7jy" firstAttribute="trailing" secondItem="LMx-kh-VmJ" secondAttribute="trailingMargin" id="tYO-co-Ndg"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="blE-Pe-OcQ"/>
+                        <viewLayoutGuide key="safeArea" id="wxD-s3-6n7"/>
                     </view>
                     <navigationItem key="navigationItem" id="Imq-2A-caI"/>
                     <connections>
-                        <outlet property="gitDraw" destination="T9U-V1-v3C" id="J6z-6m-reW"/>
+                        <outlet property="gitDraw" destination="SzR-oD-cXb" id="d0g-92-bXN"/>
+                        <outlet property="gitScroll" destination="Y5H-Bg-7jy" id="KmR-Er-9EX"/>
                         <outlet property="pinchRecognizer" destination="VpH-Xw-oI9" id="Kcf-87-4cs"/>
                     </connections>
                 </viewController>
@@ -151,7 +146,7 @@
                     </connections>
                 </pinchGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="2750.7246376811595" y="118.52678571428571"/>
+            <point key="canvasLocation" x="2750.7246376811599" y="118.52678571428571"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wCC-Ls-rC7">
@@ -169,7 +164,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nel-Bd-huk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="976.81159420289862" y="118.52678571428571"/>
+            <point key="canvasLocation" x="976.81159420289873" y="118.52678571428571"/>
         </scene>
     </scenes>
     <resources>
